# unoq_food

./: .gitignore  README.md  flash.sh
data/: init_db.sql
network/: dnsmasq-ap.conf  hostapd.conf  setup-ap.sh
server/: Cargo.toml
server/src/: main.rs
server/src/static/: index.html
systemd/: food-manager.service
tasks/: lessons.md  todo.md
