[package]
name = "food-manager"
edition = "2021"

[dependencies]
axum         = "0.7"
tokio        = { version = "1", features = ["full"] }
rusqlite     = { version = "0.31", features = ["bundled"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tower-http   = { version = "0.5", features = ["fs"] }
reqwest      = { version = "0.12", default-features = false, features = ["json"] }
